# Rono

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT_GUIDE.md  FINAL_RESULTS.md  INSTALLATION_FIXES.md  ISSUES_AND_FIXES.md  LICENSE  QUICK_DEPLOY.md  README.md  RONO_LANGUAGE_DOCUMENTATION.md  STATUS_REPORT.md  install_local.sh  math_utils.rono  string_utils.rono  test_shift.chif
.github/workflows/: release.yml
editor-support/: INSTALLATION.md
editor-support/sublime-text/: Rono.sublime-syntax
editor-support/trae-ai/: language-configuration.json  rono.tmLanguage.json
editor-support/vim/: rono.vim
editor-support/vscode/: README.md  language-configuration.json  package.json  rono.tmLanguage.json  snippets.json
packaging/arch/: PKGBUILD
packaging/debian/: control  rules
packaging/homebrew/: rono.rb
scripts/: deploy.sh  install-windows.cmd  install.ps1  install.sh  test-install.sh  test-simple.sh
src/: ast.rs  compiler.rs  error.rs  interpreter.rs  ir_gen.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.c  semantic.rs  semantic_test.rs  types.rs
