[package]
name = "rono-lang"
version = "0.1.0"
edition = "2021"

[lib]
name = "rono_lang"
path = "src/lib.rs"

[[bin]]
name = "rono"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"